# src/app/api/functions.ts
@@ -1,6 +1,10 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { ApiApiKeysControllersPost$Params } from './fn/api-keys-controllers/api-api-keys-controllers-post';
+export { apiApiKeysControllersPost } from './fn/api-keys-controllers/api-api-keys-controllers-post';
+export type { ApiApiKeysControllersValidarApiKeyApikeyGet$Params } from './fn/api-keys-controllers/api-api-keys-controllers-validar-api-key-apikey-get';
+export { apiApiKeysControllersValidarApiKeyApikeyGet } from './fn/api-keys-controllers/api-api-keys-controllers-validar-api-key-apikey-get';
 export type { ApiDashboardDashboardGet$Params } from './fn/dashboard/api-dashboard-dashboard-get';
 export { apiDashboardDashboardGet } from './fn/dashboard/api-dashboard-dashboard-get';
 export type { ApiIncidentsListaIncidentsGet$Params } from './fn/incidents/api-incidents-lista-incidents-get';
