# src/app/api/models.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { ApiKeyRequestDto } from './models/api-key-request-dto';
 export type { IncidentInsertDto } from './models/incident-insert-dto';
 export type { IncidentUpdateDto } from './models/incident-update-dto';
 export type { ShovelInsertDto } from './models/shovel-insert-dto';
