# src/app/api/models/api-key-request-dto.ts
@@ -1,0 +1,6 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ApiKeyRequestDto {
+  email?: string | null;
+}
